# RemoteVideoCam

./: .gitignore  LICENSE.txt  README.md  WEBRTC_CONNECTION_ANALYSIS.md  WIFI_DIRECT_DEBUG.md  build.gradle  build.gradle.kts  index.md  local.properties  release.sh  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build-apk.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/avmedia/remotevideocam/: IHideableLayout.kt  (+4 more)
app/src/main/res/color/: selector_tint.xml
app/src/main/res/drawable/: back_button.xml  ic_launcher_foreground.xml  ic_monitor_black_24dp.xml  ic_motion_detection.xml  ic_settings.xml  ic_video_camera_front_black_24dp.xml
app/src/main/res/drawable-v24/: border_shadow.xml  ic_flip_camera.xml  panels_background.xml
app/src/main/res/layout/: activity_main.xml  dialog_connection_selection.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt  video.txt
fastlane/metadata/android/en-US/changelogs/: 20.txt  27.txt  28.txt  29.txt  31.txt  32.txt  33.txt  34.txt  36.txt  43.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
keystore/: keystore.jks
linux-client/: .gitignore  README.md  main.py  pyproject.toml
(+96 files in other folders)
