[project]
name = "linux-client"
version = "0.1.0"
description = "RemoteVideoCam Linux Client – receives video from the Android app over WebRTC and outputs to a v4l2 loopback device"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.14.0",
    "zeroconf>=0.148.0",
]

[project.scripts]
rvc-client = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]